[metadata]
name = jupynium
description = Neovim plugin that automates Jupyter Notebook editing/browsing using Selenium.
author = Kiyoon Kim
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
	pynvim >= 0.4.3
	coloredlogs >= 15.0.0
	verboselogs >= 1.7
	selenium >= 4.7.2
	psutil >= 5.9.4
	persist-queue >= 0.8.0
	packaging < 22.0
	importlib-metadata < 5.0
python_requires = >=3.7
package_dir =
    =src
packages = find_namespace:
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24
	black>=22.0.0

[options.package_data]
jupynium =
	lua/*.lua
	js/*.js

[options.entry_points]
console_scripts =
    jupynium = jupynium.cmds.jupynium:main
    ipynb2jupy = jupynium.cmds.ipynb2jupy:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/jupynium/_version.py
versionfile_build = jupynium/_version.py
tag_prefix = v
parentdir_prefix = jupynium-
